# sre-agent

./: .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_PLAN.md  PROMPT.md  README.md  dev-iteration.sh  dev-log.md  pyproject.toml
.github/workflows/: ci.yml
.ralph/: PROMPT.md
app/: main.py
app/agent/analysis/: __init__.py  event_correlation.py  log_parser.py
app/agent/graph/: __init__.py  graph.py  nodes.py  state.py
app/agent/llm/: __init__.py  registry.py
app/agent/memory/: __init__.py  session.py
app/agent/tools/: __init__.py  base.py  k8s.py  spark.py  yunikorn.py
app/api/v1/: chat.py  metrics.py  patrol.py  queue.py  router.py  spark.py
app/core/: config.py  logging.py
app/infrastructure/: __init__.py  alertmanager.py  history_client.py  k8s_client.py  log_parser.py  metrics_exporter.py  notification.py  yunikorn_client.py
app/patrol/: __init__.py  checks.py  engine.py  rules.py  scheduler.py
docs/: USER_MANUAL.md
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  patrol-job.yaml  rbac.yaml  service.yaml
tests/: conftest.py
tests/integration/: test_api.py  test_patrol.py
tests/unit/: test_alertmanager.py  test_log_parser.py  test_metrics_exporter.py  test_nodes.py  test_notification.py  test_registry.py  test_state.py  test_tools.py
tests/unit/agent/: test_nodes.py  test_session.py  test_tools.py
tests/unit/analysis/: test_event_correlation.py  test_log_parser.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: Chat.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  Dashboard.tsx  MessageInput.tsx  MessageList.tsx  PatrolPanel.tsx  SessionSidebar.tsx  Sidebar.tsx  TaskTable.tsx  index.ts
web/src/hooks/: useChat.ts
web/src/types/: chat.ts  index.ts
