[project]
name = "sre-agent"
version = "0.1.0"
description = "SRE Agent for Spark on K8s operations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shiwen", email = "shiwen@example.com" }]
keywords = ["sre", "agent", "spark", "kubernetes", "llm"]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.40",
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "httpx>=0.26.0",
    "kubernetes>=28.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============== Ruff 配置 ==============
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (交给 formatter)
    "B008",   # function call in default argument (FastAPI Depends 需要)
    "ARG001", # unused function argument (某些回调函数)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============== MyPy 配置 ==============
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "kubernetes.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true

# ============== Pytest 配置 ==============
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (need K8s cluster)",
    "e2e: End-to-end tests",
]

# ============== Coverage 配置 ==============
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/__init__.py",
    "tests/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true